--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=generate_number
-spring.datasource.url=jdbc:postgresql://localhost:5432/generate-number
+spring.application.name=test
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=1987
 
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
+orgCode.okato.length=6
 
