--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=test
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=1987
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 orgCode.okato.length=6
+
 
